Fixed toast alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -11371,16 +11371,18 @@ footer > button{
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
 .message {
   visibility: hidden; /* Hidden by default. Visible on click */
-  max-width: 30vw; /* Set a default minimum width */
-  margin-left: -125px; /* Divide value of min-width by 2 */
-  /*background-color: #333;  Black background color */
   color: #fff; /* White text color */
   text-align: center; /* Centered text */
   border-radius: 2px; /* Rounded borders */
   padding: 16px; /* Padding */
-  position: fixed; /* Sit on top of the screen */
+  position: absolute; /* Sit on top of the screen */
+  transform: translate(-50%, 0);
+  max-width: 80vw; /* Set a default minimum width */
+  margin-left: auto;
+  margin-right: auto;
+  left: 50%;
+
   z-index: 1; /* Add a z-index if needed */
-  left: 50%; /* Center the snackbar */
   bottom: 30px; /* 30px from the bottom */
 }
 
